# landmark-detection

./: CMakeLists.txt  README.md
detector/: br_detector.h
detector_gui/: CMakeLists.txt  main.cpp  mainwindow.cpp
release_aimavig15/: README.md
release_aimavig15/detector/: blur.fsh  br_detector.cpp  br_detector.h  canny.fsh  hsv.fsh  sobel.fsh
release_aimavig15/detector_gui/: CMakeLists.txt  calib_example.xml  gpu_worker_win.cpp  gpu_worker_win.h  main.cpp  mainwindow.cpp  mainwindow.h
release_fruct17/: README.md
release_fruct17/detector/: CMakeLists.txt  br_detector.cpp  hungarian.c
release_fruct17/detector_gui/: mainwindow.h
